--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -17,10 +17,11 @@
         android:maxWidth="200dp"
         android:maxHeight="200dp"
         android:src="@drawable/logo"
-        app:layout_constraintBottom_toTopOf="@id/lowConstraint"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias=".08" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/lowConstraint"
@@ -107,14 +108,16 @@
         </com.google.android.material.textfield.TextInputLayout>
 
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/btnRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
+            android:theme="@style/AppTheme.MaterialButton"
             android:layout_margin="25dp"
-            android:background="@drawable/btn_bg"
+            app:cornerRadius="120dp"
             android:fontFamily="sans-serif"
-            android:foreground="@drawable/ripple"
+            app:rippleColor="@color/colorAccent"
             android:text="@string/register"
             android:textColor="@color/colorAccent"
             android:textSize="20sp"
@@ -127,7 +130,7 @@
             android:id="@+id/regProgress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="visible"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@id/btnRegister"
             app:layout_constraintEnd_toEndOf="@id/btnRegister"
             app:layout_constraintStart_toStartOf="@id/btnRegister"
