--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
@@ -11,6 +11,9 @@
         <item name="android:navigationBarColor">@color/colorPrimary</item>
     </style>
 
+    <style name="AppTheme.Default">
+    <item name="android:windowBackground">@color/colorAccent</item>
+    </style>
     <style name="AppTheme.Splash">
     <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
@@ -19,7 +22,12 @@
     </style>
 
 
-    <style name="AppTheme.TextLabel" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme.MaterialButton" parent="Theme.MaterialComponents">
+        <item name="colorAccent">@color/colorPrimary</item>
+        <item name="colorPrimary">@color/colorAccent</item>
+    </style>
+
+    <style name="AppTheme.TextLabel" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:textColorHint">@color/hint_color</item>
         <item name="android:textSize">16sp</item>
         <item name="colorAccent">@color/colorPrimary</item>
