--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@style/AppTheme.Auth"
-    tools:context=".RegisterActivity"
+    tools:context=".activities.RegisterActivity"
     tools:ignore="InvalidId">
 
     <ImageView
