--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -5,12 +5,16 @@
     android:theme="@style/AppTheme"
     android:background="@color/colorAccent">
 
-
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/notificationSwipeRefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Notification not available yet!"
         android:textSize="24dp"
         android:textAlignment="center"
-        android:layout_gravity="center"/>
+        android:gravity="center"/>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </FrameLayout>
