--- a/app/src/main/res/menu/bottom_app_bar.xml
+++ b/app/src/main/res/menu/bottom_app_bar.xml
@@ -4,6 +4,12 @@
 
 
     <item
+        android:id="@+id/bottom_app_home"
+        android:icon="@drawable/ic_home_black_24dp"
+        android:title="@string/nav_item1"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/bottom_app_profile"
         android:icon="@drawable/ic_profile_white_24dp"
         android:title="@string/nav_item2"
