--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="hint_color">#393939</color>
     <color name="unselected_text_color">#e0e0e0</color>
     <color name="grey">#e0e0e0</color>
+    <color name="list_divider">#d9d9d9</color>
 
 </resources>
