--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:theme="@style/AppTheme.TextLabel"
+            app:hintTextAppearance="@style/MyStyle.InputLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -48,6 +48,7 @@
                 android:id="@+id/userMailText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:theme="@style/MyTheme.EditText"
                 android:fontFamily="sans-serif"
                 android:hint="@string/mail"
                 android:inputType="textEmailAddress"
@@ -62,7 +63,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:theme="@style/AppTheme.TextLabel"
+            app:hintTextAppearance="@style/MyStyle.InputLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/userNameTIL"
@@ -74,6 +75,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
                 android:hint="@string/password"
+                android:theme="@style/MyTheme.EditText"
                 android:inputType="textPassword"
                 android:textColor="@color/colorPrimary"
                 android:textSize="18sp" />
@@ -94,7 +96,7 @@
             android:text="@string/login"
             android:textColor="@color/colorAccent"
             app:rippleColor="@color/colorAccent"
-            android:textSize="20sp"
+            android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -108,7 +110,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="25dp"
             android:fontFamily="sans-serif"
-            android:foreground="@drawable/ripple"
+            android:foreground="@drawable/accent_ripple"
             android:onClick="forgotPassword"
             android:text="@string/forgot_password"
             android:visibility="visible"
@@ -122,7 +124,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="25dp"
             android:fontFamily="sans-serif"
-            android:foreground="@drawable/ripple"
+            android:foreground="@drawable/accent_ripple"
             android:onClick="insteadOnClick"
             android:text="@string/create_an_account_instead"
             android:visibility="visible"
