--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -40,8 +40,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:theme="@style/AppTheme.TextLabel"
             app:errorEnabled="true"
+            app:hintTextAppearance="@style/MyStyle.InputLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -51,6 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
+                android:theme="@style/MyTheme.EditText"
                 android:hint="@string/username"
                 android:inputType="textPersonName"
                 android:textColor="@color/colorPrimary"
@@ -63,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:theme="@style/AppTheme.TextLabel"
+            app:hintTextAppearance="@style/MyStyle.InputLayout"
             app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -75,6 +76,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif"
                 android:hint="@string/email"
+                android:theme="@style/MyTheme.EditText"
                 android:inputType="textEmailAddress"
                 android:textColor="@color/colorPrimary"
                 android:textSize="18sp" />
@@ -87,7 +89,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
-            android:theme="@style/AppTheme.TextLabel"
+            app:hintTextAppearance="@style/MyStyle.InputLayout"
             app:counterEnabled="true"
             app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
@@ -99,6 +101,7 @@
                 android:id="@+id/PassText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:theme="@style/MyStyle.InputLayout"
                 android:fontFamily="sans-serif"
                 android:hint="@string/password"
                 android:inputType="textPassword"
@@ -110,21 +113,21 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnRegister"
+            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-            android:theme="@style/AppTheme.MaterialButton"
             android:layout_margin="25dp"
-            app:cornerRadius="120dp"
             android:fontFamily="sans-serif"
-            app:rippleColor="@color/colorAccent"
             android:text="@string/register"
             android:textColor="@color/colorAccent"
-            android:textSize="20sp"
+            android:textSize="24sp"
+            android:theme="@style/AppTheme.MaterialButton"
+            app:cornerRadius="120dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/PassTIL" />
+            app:layout_constraintTop_toBottomOf="@+id/PassTIL"
+            app:rippleColor="@color/colorAccent" />
 
         <ProgressBar
             android:id="@+id/regProgress"
@@ -143,7 +146,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginEnd="40dp"
             android:fontFamily="sans-serif"
-            android:foreground="@drawable/ripple"
+            android:foreground="@drawable/accent_ripple"
             android:onClick="alreadyAction"
             android:text="@string/already"
             app:layout_constraintEnd_toEndOf="parent"
