--- a/app/src/main/res/drawable-v24/primary_ripple.xml
+++ b/app/src/main/res/drawable-v24/primary_ripple.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#f0f0f0">
+    android:color="@color/colorPrimary">
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
             <corners android:radius="4dp"/>
-            <solid android:color="?android:colorAccent" />
         </shape>
     </item>
 </ripple>
