--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/rounded_corner_bg"
     app:behavior_hideable="true"
     app:layout_behavior="@string/bottom_sheet_behavior">
 
@@ -23,7 +22,7 @@
         android:id="@+id/upConstraintLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/rounded_corner_bg">
+        android:background="@color/colorAccent">
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
