--- a/app/src/main/res/layout/fragment_main_settings.xml
+++ b/app/src/main/res/layout/fragment_main_settings.xml
@@ -1,37 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorAccent"
-    android:padding="18dp">
+    android:padding="20dp">
 
 
     <TextView
+        android:id="@+id/textSettings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textSettings"
         android:paddingStart="4dp"
-        android:text="Settings"
-        android:textSize="35dp"
-        android:textColor="@color/black"/>
-
+        android:paddingEnd="4dp"
+        android:text="@string/settings"
+        android:textColor="@color/black"
+        android:textSize="35sp" />
 
 
     <ListView
         android:id="@+id/settingsListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/textSettings"
+        android:layout_marginTop="12dp"
+        android:divider="@color/hint_color_active"
+        android:dividerHeight="1dp"
         android:background="@color/colorAccent"
         android:paddingTop="8dp"
-        android:layout_below="@id/textSettings"
-        />
+        android:paddingBottom="8dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/backFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:src="@drawable/ic_arrow_back_black_24dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/ic_arrow_back_black_24dp"
+        app:rippleColor="@color/colorPrimary" />
 </RelativeLayout>
