--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -23,7 +23,7 @@
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profileDP"
                 android:layout_width="0dp"
-                android:layout_height="90dp"
+                android:layout_height="fill_parent"
                 android:layout_gravity="center"
                 android:layout_weight="25"
                 android:src="@drawable/ic_account_circle_512dp" />
@@ -32,7 +32,6 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
                 android:layout_weight="75">
 
                 <include layout="@layout/snippet_top_profile" />
