--- a/app/src/main/res/layout/snippet_top_profile.xml
+++ b/app/src/main/res/layout/snippet_top_profile.xml
@@ -12,7 +12,7 @@
 
         <TextView
             android:id="@+id/tvPosts"
-            android:layout_width="wrap_content"
+            android:layout_width="75dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="2dp"
@@ -21,7 +21,7 @@
             android:textAlignment="center"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/tvFollowing"
+            app:layout_constraintEnd_toStartOf="@id/tvRooms"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,8 +36,8 @@
             app:layout_constraintTop_toBottomOf="@id/tvPosts"/>
 
         <TextView
-            android:id="@+id/tvFollowers"
-            android:layout_width="wrap_content"
+            android:id="@+id/tvConnections"
+            android:layout_width="75dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="2dp"
@@ -45,12 +45,13 @@
             android:text="300"
             android:textColor="@color/black"
             android:textSize="18sp"
+            android:textAlignment="center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textFollowers"
+            android:id="@+id/textConnections"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -59,54 +60,56 @@
             android:text="Connections"
             android:textSize="12sp"
             app:layout_constraintHorizontal_bias="0.526"
-            app:layout_constraintStart_toStartOf="@id/tvFollowers"
-            app:layout_constraintEnd_toEndOf="@+id/tvFollowers"
-            app:layout_constraintTop_toBottomOf="@+id/tvFollowers" />
+            app:layout_constraintStart_toStartOf="@id/tvConnections"
+            app:layout_constraintEnd_toEndOf="@+id/tvConnections"
+            app:layout_constraintTop_toBottomOf="@+id/tvConnections" />
 
         <TextView
-            android:id="@+id/tvFollowing"
-            android:layout_width="wrap_content"
+            android:id="@+id/tvRooms"
+            android:layout_width="75dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
+            android:layout_marginTop="2dp"
             android:text="12"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="18sp"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@id/tvFollowers"
+            app:layout_constraintStart_toEndOf="@id/tvConnections"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textFollowing"
+            android:id="@+id/textRooms"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:text="Rooms"
             android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="@id/tvFollowing"
-            app:layout_constraintStart_toStartOf="@id/tvFollowing"
-            app:layout_constraintTop_toBottomOf="@+id/tvFollowing" />
+            android:paddingStart="2dp"
+            android:paddingEnd="2dp"
+            app:layout_constraintEnd_toEndOf="@id/tvRooms"
+            app:layout_constraintStart_toStartOf="@id/tvRooms"
+            app:layout_constraintTop_toBottomOf="@+id/tvRooms" />
 
-        <TextView
-            android:id="@+id/textEditProfile"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnEditProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingEnd="30dp"
-            android:paddingStart="30dp"
-            android:layout_marginStart="8dp"
+            android:theme="@style/Widget.MaterialComponents.Button.UnelevatedButton"
+            app:rippleColor="@color/colorPrimary"
+            app:strokeColor="@color/colorPrimary"
+            app:strokeWidth="1dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
             android:background="@drawable/grey_border"
-            android:text="Edit your profile"
+            android:text="@string/edit_your_profile"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textFollowers"
+            app:layout_constraintTop_toBottomOf="@+id/textConnections"
             app:layout_constraintVertical_bias="0.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
