--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,9 +5,11 @@
     <color name="colorAccent">#ffffff</color>
     <color name="white">#ffffff</color>
     <color name="black">#000</color>
-    <color name="hint_color">#393939</color>
-    <color name="unselected_text_color">#e0e0e0</color>
+    <color name="unelected_text_color">#e0e0e0</color>
     <color name="grey">#e0e0e0</color>
     <color name="list_divider">#d9d9d9</color>
+    <color name="error_color">#C62828</color>
+    <color name="hint_color_active">#00897B</color>
+    <color name="hint_color_inactive">#9E9E9E</color>
 
 </resources>
