--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,26 +12,38 @@
     </style>
 
     <style name="AppTheme.Default">
-    <item name="android:windowBackground">@color/colorAccent</item>
-    </style>
-    <style name="AppTheme.Splash">
-    <item name="android:windowBackground">@drawable/splash_screen</item>
-    </style>
-    <style name="AppTheme.Auth">
-    <item name="android:windowBackground">@drawable/auth_bg_screen</item>
+        <item name="android:windowBackground">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme.Splash">
+        <item name="android:windowBackground">@drawable/splash_screen</item>
+    </style>
+
+    <style name="AppTheme.Auth">
+        <item name="android:windowBackground">@drawable/auth_bg_screen</item>
+    </style>
 
     <style name="AppTheme.MaterialButton" parent="Theme.MaterialComponents">
         <item name="colorAccent">@color/colorPrimary</item>
         <item name="colorPrimary">@color/colorAccent</item>
     </style>
 
-    <style name="AppTheme.TextLabel" parent="Theme.MaterialComponents.Light.NoActionBar">
-        <item name="android:textColorHint">@color/hint_color</item>
-        <item name="android:textSize">16sp</item>
-        <item name="colorAccent">@color/colorPrimary</item>
-        <item name="colorControlNormal">@color/colorPrimary</item>
-        <item name="colorControlActivated">@color/colorPrimary</item>
+    <style name="MyStyle.InputLayout" parent="Widget.Design.TextInputLayout">
+        <item name="errorTextAppearance">@style/ErrorTextAppearance</item>
+        <item name="hintTextAppearance">@style/HintTextAppearance</item>
     </style>
+
+    <style name="MyTheme.EditText" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@color/hint_color_inactive</item>
+        <item name="colorControlActivated">@color/hint_color_active</item>
+    </style>
+
+    <style name="HintTextAppearance" parent="TextAppearance.Design.Hint">
+        <item name="android:textColor">@color/hint_color</item>
+    </style>
+
+    <style name="ErrorTextAppearance" parent="TextAppearance.Design.Error">
+        <item name="android:textColor">@color/error_color</item>
+    </style>
+
 </resources>
