--- a/app/src/main/res/drawable/dim_bg.xml
+++ b/app/src/main/res/drawable/dim_bg.xml
@@ -2,6 +2,6 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/colorAccent" />
-    <corners android:radius="8dp"/>
+    <solid android:color="@color/dim_background" />
+
 </shape>
