--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -26,7 +26,7 @@
                 android:layout_height="fill_parent"
                 android:layout_gravity="center"
                 android:layout_weight="25"
-                android:src="@drawable/ic_account_circle_512dp" />
+                android:src="@drawable/img_dp" />
 
             <FrameLayout
                 android:layout_width="0dp"
