--- a/app/src/main/res/layout/snippet_mid_profile.xml
+++ b/app/src/main/res/layout/snippet_mid_profile.xml
@@ -12,7 +12,7 @@
             android:id="@+id/display_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Mayank"
+            android:text="Mayank Sinha"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:text="Mostly Sane"
+            android:text="Movies and Geek Stuff"
             android:textColor="@color/black"
             android:textSize="16sp" />
 
@@ -31,6 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:textColor="#000050"
             android:text="https://backyardev.com"
             android:textSize="16sp" />
 
